[package]
authors = ["Sanemat <o.gata.ken@gmail.com>"]
categories = [
    "command-line-interface",
    "command-line-utilities",
    "development-tools",
]
description = "My majestic module"
include = [
    "src/**/*",
    "Cargo.toml",
    "changelog.md",
    "readme.md",
    "license-apache",
    "license-mit",
]
keywords = ["git"]
license = "MIT/Apache-2.0"
name = "github-httpsable-cli"
repository = "https://github.com/packsaddle/github-httpsable-cli/"
version = "0.1.0"

[[bin]]
name = "github-httpsable-cli"
path = "src/main.rs"
[badges.appveyor]
project_name = "packsaddle/github-httpsable-cli"
repository = "packsaddle/github-httpsable-cli"

[badges.travis-ci]
repository = "packsaddle/github-httpsable-cli"

[dependencies]
