[package]
authors = ["Sanemat <o.gata.ken@gmail.com>"]
categories = [
    "command-line-interface",
    "command-line-utilities",
    "development-tools",
]
description = "github via https."
include = [
    "src/**/*",
    "Cargo.toml",
    "changelog.md",
    "readme.md",
    "license-apache",
    "license-mit",
]
keywords = ["git"]
license = "MIT/Apache-2.0"
name = "github_httpsable_cli"
repository = "https://github.com/packsaddle/rust-github_httpsable_cli/"
version = "0.1.0"

[[bin]]
name = "github-httpsable"
path = "src/main.rs"
[badges.appveyor]
project_name = "sanemat/rust-github_httpsable_cli"
repository = "packsaddle/rust-github_httpsable_cli"

[badges.travis-ci]
repository = "packsaddle/rust-github_httpsable_cli"

[dependencies]
git_httpsable = "1.0.0"
